--- a/android-prediction-yelp-demo/app/src/main/res/values/strings.xml
+++ b/android-prediction-yelp-demo/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_user">UserActivity</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_pref">PrefActivity</string>
 
 </resources>
